src/test/ui/consts/miri_unleashed/non_const_fn.stderr
warning: skipping const checks
  --> $DIR/non_const_fn.rs:9:16
   |
LL | static C: () = foo();
   |                ^^^^^

error[E0080]: could not evaluate static initializer
  --> $DIR/non_const_fn.rs:9:16
   |
LL | static C: () = foo();
   |                ^^^^^ calling non-const function `foo`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
